vector data download function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <div id="map"></div>
+    <div id="tools">
+      <a id="clear">Clear</a>
+      <a id="download" download="features.json">Download</a>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
